# genki

./: AGENTS.md  DESIGN.md  turbo.jsonc
.github/workflows/: cd.yml  ci.yml
backend/: package.json
backend/src/: env.ts
backend/src/modules/users/emails/: ResetPasswordEmail.tsx
backend/src/shared/infra/: betterAuth.ts
backend/src/shared/infra/elysia/: global.ts
backend/src/shared/repositories/: README.md
backend/src/shared/repositories/mock/: stores.ts
backend/src/shared/repositories/prisma/: index.ts
docs/: business-rules.md
docs/business-rules/: notifications.md  premium-and-sync.md  product-stance.md  treatment-plans.md
frontend/: index.html  package.json
frontend/src/: globals.css  main.tsx  providers.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/features/treatments/domain/: occurrences.test.ts  occurrences.ts  sync.test.ts  sync.ts  types.ts
frontend/src/features/treatments/hooks/: useTreatmentApp.ts
frontend/src/features/treatments/providers/: adapters.ts  localRepository.ts
frontend/src/hooks/: useSyncSession.ts
frontend/src/i18n/locales/: en-US.json
frontend/src/lib/: admin-guard.ts  baseui-theme.ts
frontend/src/lib/api/: index.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/components/: AuthExampleCard.tsx  HeroSection.tsx  SyncPremiumCard.tsx  TreatmentPlanCard.tsx
frontend/src/routes/components/app/: AppShell.tsx  ConflictReview.tsx  (+6 more)
frontend/src/stores/: auth.ts
plans/: 0001-genki-business-rules-design.md  0002-genki-v1-app-implementation.md
scripts/: affected-packages.ts
(+3 files in other folders)
